# git-trend

./: .gitignore  LICENSE  README.md  enums.py  get_trending_items.py  languages.py  setup.cfg  setup.py  trending.py  utils.py
.github/workflows/: build.yml  publish-to-test-pypi.yml
