[metadata]
name = git-trend
version = 0.5
author = Manoj Karthick
author_email = manojkarthick@ymail.com
url = https://github.com/manojkarthick/git-trend
description = My package description
long_description_content_type = text/markdown
long_description = file: README.md
keywords = github, trending, repositories, developers, languages
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    termcolor
    beautifulsoup4
    requests
    prettytable
py_modules = get_trending_items
python_requires = >=3.6


[options.entry_points]
console_scripts =
    git-trend = get_trending_items:cli
