[metadata]
name = git-trend
version = 0.5.3
author = Manoj Karthick
author_email = manojkarthick@ymail.com
url = https://github.com/manojkarthick/git-trend
description = A Python CLI tool for fetching trending github repositories and developers
long_description_content_type = text/markdown
long_description = file: README.md
keywords = github, trending, repositories, developers, languages
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    termcolor
    beautifulsoup4
    requests
    prettytable
py_modules =
    trending
    utils
    enums
python_requires = >=3.6


[options.entry_points]
console_scripts =
    git-trend = trending:cli
